@@ -1,3 +1,9 @@
+Mon Sep 26 11:50:03 2016  Kazuki Yamaguchi  <k@rhe.jp>
+
+	* tool/rbinstall.rb (gem): Don't install gemspec if no files will be
+	  installed for the gem. This happens when the extension library is not
+	  compiled.
+
 Mon Sep 26 11:06:47 2016  Kazuki Yamaguchi  <k@rhe.jp>
 
 	* string.c (enc_strlen, rb_enc_strlen_cr): Avoid signed integer
